myk8sapp/templates/prometheus-networkpolocy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-networkpolicy
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 127.0.0.1/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
